big style change, hot pink accent color

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@ custom_css_class: home
   </article>
   {% if post.type == 'post' %}
     <div class="article-divider">
-      <svg height="1" width="140">
-        <line x1="0" y1="0" x2="140" y2="0" style="stroke:#ce2d10;stroke-width:1" />
+      <svg height="1" width="300">
+        <line x1="0" y1="0" x2="300" y2="0" style="stroke:#f135a6;stroke-width:1" />
       </svg>
     </div>
   {% endif %}
