Neat grid implementation and Bootstrap removal complete

--- a/search/index.html
+++ b/search/index.html
@@ -4,9 +4,9 @@ title: Search
 search: true
 ---
 <h1 class="page-title">Search</h1>
-<div id="search">
-  <form role="form" onsubmit="event.preventDefault()">
-    <input class="form-control" type="text" id="search-query" name="q" autofocus autocomplete="off">
+<div id="search" class="search">
+  <form onsubmit="event.preventDefault()">
+    <input class="search-query" type="text" id="search-query" name="q" autofocus autocomplete="off">
   </form>
 </div>
 <section id="search-results">
