ios emoji fix, footnotes reverse link tweak

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ custom_css_class: home
   </article>
   {% if post.type == 'post' %}
     <div class="article-divider">
-      &#9830;&#9830;&#9830;
+      &#9830;&#xFE0E;&#9830;&#xFE0E;&#9830;&#xFE0E;
     </div>
   {% endif %}
 {% endfor %}
